# corpo_oversight_demo

./: .env-sample  README.md  pyproject.toml
data/xlsx/: bicol_resources_corp_gis_2023.xlsx  bicol_resources_corp_gis_2023.xlsx:Zone.Identifier  bicol_resources_corp_gis_2024.xlsx  bicol_resources_corp_gis_2024.xlsx:Zone.Identifier
src/pages/: admin.py  app.py
src/prompts/: __init__.py
src/utils/: __init__.py
